--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,6 @@
 stages:
   - build
   - test
-  - flask api test
 
 image: python:latest
 
@@ -24,6 +23,10 @@ before_script:
 
 build-code-job:
   stage: build
+
+  only:
+    - develop
+
   script:
     - echo "Check the python version, then build some Python project files:"
     - apt-get -qq update && apt-get -qq install -y python
@@ -33,6 +36,10 @@ build-code-job:
 
 test-sensor:
   stage: test
+  
+  only:
+    - develop
+
   script:
     - echo "TESTING SOME SENSOR TESTS"
     - python -m unittest discover -s ./api-application/tests/sensors_controller/
@@ -40,6 +47,10 @@ test-sensor:
 
 test-security:
   stage: test
+
+  only:
+    - develop
+
   script:
     - echo "TESTING SOME SECURITY TESTS"
     - python -m unittest discover -s ./api-application/tests/security_controller/
@@ -47,6 +58,10 @@ test-security:
     
 test-api:
   stage: flask api test
+
+  only:
+    - develop
+
   script:
     - echo "RUNNING THE TEST API"
     - python api-application/routes.py &
